[build-system]
requires = ["setuptools>=70.1.0"]
build-backend = "setuptools.build_meta"

[project]
name = "transformer-ranker"
description = "Efficiently find the best-suited language model (LM) for your NLP task"
version = "0.1.3"
authors = [{ name = "Lukas Garbas", email = "lukas.garbaciauskas@informatik.hu-berlin.de" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["transferability", "language models"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate",
    "datasets",
    "sentencepiece",
    "tokenizers",
    "torch",
    "torchmetrics",
    "tqdm",
    "transformers"
]

[project.urls]
Homepage = "https://github.com/flairNLP/transformer-ranker"
Repository = "https://github.com/flairNLP/transformer-ranker"
Documentation = "https://github.com/flairNLP/transformer-ranker/tree/main/examples"

[tool.setuptools.packages.find]
include = ["transformer_ranker*"]

[project.optional-dependencies]
testing = ["pytest"]
dev = ["black", "isort", "ruff"]

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

[tool.isort]
profile = "black"
line_length = 120
skip = ["examples/code_examples"]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
